Fix broken python import when using multi line comments.

Searching for comment end tag should start *after* comment start tag,
otherwise the comment start tag will be interpreted as comment end tag too.

BUG:328055
FIXED-IN:4.11.4